2004-03-04 John BouAntoun  <jba-mono@optusnet.com.au>
	* build/AddIns/AddIns/BackendBindings/BackendBindings.addin : commented ChoosRuntimePanel binding (we can't support any other runtimes)  

2004-03-03  Todd Berman  <tberman@sevenl.net>

	* src/AddIns/DisplayBindings/Gui/SourceEditor*:
		Add ExecutingAt code.
	* src/Main/Base/Services/DebuggingService.cs:
		Add ExecutingAt support.
	* build/AddIns/SharpDevelopCore.addin:
		rearrange service order.
	* build/data/resources/icons/Breakpoint.png,ExecutionMarker.png:
		import miguel's badass icons
	
2004-03-03  Mike Kestner  <mkestner@ximian.com>

	* Main/Base/Services/DebuggingService.cs : add some debugging info
	and run the debugger before we insert breakpoints.

2004-03-03  Mike Kestner  <mkestner@ximian.com>

	* Main/Base/Services/DebuggingService.cs (UnloadService): kill
	running debugger instances on unload.

2004-03-03  Mike Kestner  <mkestner@ximian.com>

	* Main/Base/Services/DebuggingService.cs (Run): ignore if running

2004-03-03 John BouAntoun  <jba-mono@optusnet.com.au>
	* src/Main/Base/Commands/ProjectOptionsCommands.cs : enabled all the projections command actions
	* src/Main/Base/Gui/Dialogs/ProjectOptionsDialog.cs : added code to display the configuration options nodes
	* src/Main/Base/Gui/Dialogs/TreeViewOptions.cs : made treeStore explicitely protected so ProjectOptionsDialogs could append configuration nodes


2004-03-03  Todd Berman  <tberman@sevenl.net>

	* bunch o' files: Added first pass debugger support.

2004-03-03 John BouAntoun  <jba-mono@optusnet.com.au>
	* src/Main/Base/Internal/Project/Project/IncludeFilesDialog.cs : Changed ShowDialog() to do a Dialog.Run() instead of Dialog.ShowAll().
	* src/Main/Base/Internal/Project/Project/AbstractProject.cs : removed comment that said to fix the IncludeFilesDialog
	* data/resources/glade/Base.glade : made the treeview's scrolled window visible from start

2004-03-02  Mike Kestner  <mkestner@ximian.com>

	* configure.in : check for mono debugger